feat: add subscription API
